week-4/Task_Week_4/k3s-yml/database.yml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wayshub-db
  labels:
    name: wayshub-db
spec:
  serviceName: wayshub-db-service
  replicas: 1
  selector:
    matchLabels:
      name: database
  volumeClaimTemplates:
    - metadata:
        name:  wayshub-db-volume-claim
      spec:
        accessModes:
          - ReadWriteOnce
        volumeMode: Filesystem
        resources:
          requests:
            storage: 3Gi
  template:
    metadata:
      name: wayshub-db
      labels:
        name: database
    spec:
      containers:
        - name: wayshub-db
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: wayshub-db-volume-claim

---

apiVersion: v1
kind: Service
metadata:
  name: wayshub-db-service
spec:
  selector:
    name: database
  ports:
    - port: 3306
      targetPort: 3306
