week-4/Task_Week_4/k3s-yml/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wayshub-ingress
  labels:
    name: wayshub-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: be-dennis.studentdumbways.my.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wayshub-be-service
            port:
              number: 5000
  - host: dennis.studentdumbways.my.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wayshub-fe-service
            port:
              number: 3000
